src/test/ui/borrowck/borrowck-ref-mut-of-imm.stderr
error[E0596]: cannot borrow field `(x as std::prelude::v1::Some).0` of immutable binding as mutable
  --> $DIR/borrowck-ref-mut-of-imm.rs:4:12
   |
LL | fn destructure(x: Option<isize>) -> isize {
   |                - help: make this binding mutable: `mut x`
...
LL |       Some(ref mut v) => *v
   |            ^^^^^^^^^ cannot mutably borrow field of immutable binding

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
